// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BreadcrumbNav > does not display address hover for native tokens 1`] = `
<DocumentFragment>
  <div
    aria-current="page"
    class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[6px]"
    data-testid="current-breadcrumb"
  >
    <h1
      class="[display:inline] box-border [word-wrap:break-word] [font-family:var(--stext-font-book)] text-[length:var(--c-text)] [font-weight:var(--c-fowe)] [line-height:var(--c-lh)] [color:var(--stext-neutral1)] whitespace-nowrap m-[0px]"
      style="--c-text: inherit; --c-fowe: inherit; --c-lh: inherit;"
    >
      ETH
    </h1>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbNav > renders hover components correctly 1`] = `
<DocumentFragment>
  <div
    aria-current="page"
    class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[6px]"
    data-testid="current-breadcrumb"
  >
    <h1
      class="[display:inline] box-border [word-wrap:break-word] [font-family:var(--stext-font-book)] text-[length:var(--c-text)] [font-weight:var(--c-fowe)] [line-height:var(--c-lh)] [color:var(--stext-neutral1)] whitespace-nowrap m-[0px]"
      style="--c-text: inherit; --c-fowe: inherit; --c-lh: inherit;"
    >
      WBTC
    </h1>
    <div
      class="[container-name:true] flex basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent flex-row items-center gap-[4px] relative [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[0.75] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
      role="button"
      style="color: rgba(19, 19, 19, 0.63);"
      tabindex="0"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 overflow-hidden text-ellipsis whitespace-nowrap"
        style="max-width: calc(100% - 0px);"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral2)] whitespace-nowrap"
        >
          0x2260...C599
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[16px] h-[16px] relative"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 opacity-[0] absolute top-[0px] left-[0px] [transform:var(--c-tr)] [transition:var(--c-t)]"
          style="--c-tr: translateY(5px); --c-t: opacity 200ms ease-in-out, transform 200ms ease-in-out;"
        >
          <svg
            fill="none"
            stroke-width="8"
            style="width: 16px; height: 16px;"
            viewBox="0 0 17 18"
          >
            <path
              d="M8.62508 0.666664C4.02508 0.666664 0.291748 4.4 0.291748 9C0.291748 13.6 4.02508 17.3333 8.62508 17.3333C13.2251 17.3333 16.9584 13.6 16.9584 9C16.9584 4.4 13.2251 0.666664 8.62508 0.666664ZM11.9834 7.50001L8.09173 11.3833C7.97507 11.5083 7.81674 11.5667 7.65007 11.5667C7.49174 11.5667 7.3334 11.5083 7.2084 11.3833L5.26675 9.44169C5.02508 9.20002 5.02508 8.79997 5.26675 8.55831C5.50841 8.31664 5.90841 8.31664 6.15008 8.55831L7.65007 10.0583L11.1001 6.61668C11.3417 6.36668 11.7417 6.36668 11.9834 6.61668C12.2251 6.85834 12.2251 7.25001 11.9834 7.50001Z"
              fill="currentColor"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
